# semi-discrete-transport

./: LICENSE  README.md
opt_transport/: CMakeLists.txt  README.md  opt_transport.cpp
opt_transport/measures/: CMakeLists.txt  Source.cpp  Source.h  Target.cpp
opt_transport/samples/: mu.txt  nu.txt
opt_transport/utilities/: README.md  create_sites_file.cpp
visualization/: CMakeLists.txt  README.md  create_diagram.cpp  plot_voronoi_diagram.m
visualization/samples/: sites.txt  weights.txt
